--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "@firebase/firestore": "^0.9.3",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "firebase": "^5.7.3",
-    "node-sass": "^4.11.0",
+    "is-obj": "^2.0.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
